--- a/sass/parciles/_button.scss
+++ b/sass/parciles/_button.scss
@@ -1,5 +1,9 @@
+$color:(naranja:rgb(255, 155, 109),marron:rgb(79, 69, 70));
+
+
+
 .box {
-	background-image: linear-gradient(45deg, rgb(79, 69, 70), rgb(79, 69, 70));
+	background-image: linear-gradient(45deg,  map-get($color, marron),  map-get($color, marron));
 	margin: 0px 0px;
 	padding: 20px 0px 20px 0px;
     display: flex;
@@ -15,7 +19,9 @@
   & li {
     display: inline-block;
     vertical-align: top;
-    padding: 0px 20px;}
+    padding: 0px 20px;
+    font-family: Bahnschrift;
+    color: white;}
 
   & a {
   text-decoration: none;
@@ -24,7 +30,7 @@
   height: 60px;
   line-height: 60px;
   text-align: center;
-  background: rgb(255, 155, 109);
+  background: map-get($color, naranja);
   color: #f1f1f1;
   border-radius: 50%;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, .5);
