--- a/sass/parciles/_text.scss
+++ b/sass/parciles/_text.scss
@@ -1,98 +1,57 @@
+$color:(naranja:rgb(255, 155, 109),marron:rgb(79, 69, 70));
+
+
+
 .background {
-	background-image: url("../pngs/placeholder.png");
+	background-image: url("../pngs/fondo.jpeg");
 	padding: 220px 200px;
 	position: relative;
 	box-shadow: 5px 8px 12px gray;
 	font-family: Bahnschrift;
 	text-align: center;
+	color: white;
+	text-shadow: 0 0 8px rgba(0, 0, 0, 0.8);
 }
 
 .conta {
 	padding: 20px 10px;
-	background-color: rgb(79, 69, 70);
+	background-color: map-get($color, marron);
 	font-family: Bahnschrift;
 	box-shadow: 12px 8px 12px black;
 	color: white;
 
 	& h3 {
-	background-image: linear-gradient(45deg, rgb(255, 155, 109), rgb(255, 155, 109));
+	background-image: linear-gradient(45deg, map-get($color, naranja), map-get($color, naranja));
 	padding: 5px 15px;
 	transform: skewX(-30deg);}
 
 	& h2 {
-	background-image: linear-gradient(45deg, rgb(255, 155, 109), rgb(255, 155, 109));
+	background-image: linear-gradient(45deg, map-get($color, naranja), map-get($color, naranja));
 	padding: 5px 15px;
 	transform: skewX(-30deg);}
 }
 
 .cess {
-	padding: 20px 10px;
-	background-color: rgb(79, 69, 70);
-	font-family: Bahnschrift;
-	box-shadow: 12px 8px 12px black;
-	color: white;
-
-	& h3 {
-	background-image: linear-gradient(45deg, rgb(255, 155, 109), rgb(255, 155, 109));
-	padding: 5px 15px;
-	transform: skewX(-30deg);}
-
-	& h2 {
-	background-image: linear-gradient(45deg, rgb(255, 155, 109), rgb(255, 155, 109));
-	padding: 5px 15px;
-	transform: skewX(-30deg);}
+	@extend .conta;
 }
 
-
 .cess2 {
-	padding: 20px 10px;
-	background-color: rgb(79, 69, 70);
-	font-family: Bahnschrift;
-	box-shadow: 12px 8px 12px black;
-	color: white;
-
-	& h3 {
-	background-image: linear-gradient(45deg, rgb(255, 155, 109), rgb(255, 155, 109));
-	padding: 5px 15px;
-	transform: skewX(-30deg);}
-
-	& h2 {
-	background-image: linear-gradient(45deg, rgb(255, 155, 109), rgb(255, 155, 109));
-	padding: 5px 15px;
-	transform: skewX(-30deg);}
+	@extend .conta;
 }
 
 .cess3 {
-	padding: 20px 10px;
-	background-color: rgb(79, 69, 70);
-	font-family: Bahnschrift;
-	box-shadow: 12px 8px 12px black;
-	color: white;
-
-	& h3 {
-	background-image: linear-gradient(45deg, rgb(255, 155, 109), rgb(255, 155, 109));
-	padding: 5px 15px;
-	transform: skewX(-30deg);}
-
-	& h2 {
-	background-image: linear-gradient(45deg, rgb(255, 155, 109), rgb(255, 155, 109));
-	padding: 5px 15px;
-	transform: skewX(-30deg);}
-}
-
-.form {
-	padding: 50px 0;
+	@extend .conta;
 }
 
 .titulo {
 	padding: 20px 10px;
-	background-color: rgb(79, 69, 70);
+	background-color: map-get($color, marron);
 	font-family: Bahnschrift;
 	box-shadow: 12px 8px 12px black;
 	display: flex;
 	color: white;
 	font-size: 20px;
-	background-image: linear-gradient(45deg, rgb(255, 155, 109), rgb(255, 155, 109));
+	background-image: linear-gradient(45deg, map-get($color, naranja), map-get($color, naranja));
 
 	& h1 {
 	padding: 5px;
