--- a/css/Estilo.css
+++ b/css/Estilo.css
@@ -42,7 +42,7 @@
   margin: 0px; }
 
 .background {
-  background-image: url("../pngs/fondo.svg");
+  background-image: url("../pngs/fondo.jpeg");
   padding: 220px 200px;
   position: relative;
   box-shadow: 5px 8px 12px gray;
