--- a/sass/parciles/_text.scss
+++ b/sass/parciles/_text.scss
@@ -3,7 +3,7 @@ $color:(naranja:rgb(255, 155, 109),marron:rgb(79, 69, 70));
 
 
 .background {
-	background-image: url("../pngs/fondo.svg");
+	background-image: url("../pngs/fondo.jpeg");
 	padding: 220px 200px;
 	position: relative;
 	box-shadow: 5px 8px 12px gray;
